--- a/css/styles.css
+++ b/css/styles.css
@@ -57,7 +57,7 @@ body {
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
-  /* outline: 3px solid red; */
+  outline: 3px solid red;
 }
 
 .list {
@@ -146,11 +146,15 @@ body {
 }
 
 /* ======================================================== */
-/* ======================TITLE============================= */
+/* ======================HERO============================== */
 /* ======================================================== */
 
-.title {
-  /*  стили для заголовка */
+/* .container.hero {
+  width: maxt;
+} */
+
+.hero {
+  /*  стили для секции Hero*/
   background: var(--title-background-color);
   color: var(--title-color);
   font-weight: 900;
@@ -158,15 +162,27 @@ body {
   line-height: 1.36;
   text-align: center;
   letter-spacing: 0.06em;
+  /* max-width: 100%; */
 }
 
-h1 {
-  /* ПЕРЕФРАЗИРОВАТЬ В КЛАССЫ */
+/* .hero .flexbox {
+  flex-direction: column;
+  align-items: center;
+} */
+
+.hero-title {
+  /* стили для заголовка сайта в Hero */
   margin-top: 0;
   margin-bottom: 0;
+  padding-top: 200px;
+  padding-bottom: 30px;
+  width: auto;
+  /* padding-left: 237px;
+  padding-right: 237px; */
+  /* width: auto; */
 }
 
-.button {
+.hero .button {
   /* стили для кнопки Заказать Услугу */
   color: var(--title-color);
   font-weight: 700;
@@ -174,26 +190,66 @@ h1 {
   line-height: 1.87;
   background-color: var(--active-color);
   letter-spacing: 0.06em;
+  /* margin-bottom: 200px; */
+
+  padding: 10px 32px;
+  /* box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15); */
+  border-radius: 4px;
 }
 
-.features-whatdo-common h3 {
+/* ======================================================== */
+/* ======================FEATURES========================== */
+/* ======================================================== */
+
+.featuress {
+  background: aquamarine;
+}
+.container.features {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+.list.features .title {
   /* стили для Чем Занимаемся */
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
   text-transform: uppercase;
+  margin: 0;
+  padding: 0;
+  margin-bottom: 10px;
 }
-.features-whatdo-common p {
+.list.features .text {
   color: var(--inside-color);
   font-size: 14px;
   line-height: 1.71;
+  margin: 0;
+  padding: 0;
 }
+
+.list.features {
+  outline: 3px dotted blue;
+  flex-wrap: wrap;
+}
+.list.features .item {
+  outline: 2px dashed green;
+  width: calc((100% - 3 * 30px) / 4);
+}
+.list.features .item:not(:last-child) {
+  margin-right: 30px;
+}
+
+/* ------------------------- */
+
 .features-whatdo-common h2 {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.71;
   text-align: center;
 }
+
+/* ======================================================== */
+/* ======================TEAM============================== */
+/* ======================================================== */
 
 .team-container {
   /* стили для Наша Команда */
@@ -218,6 +274,10 @@ h1 {
   text-align: center;
 }
 
+/* ======================================================== */
+/* ======================FOOTER============================ */
+/* ======================================================== */
+
 .footer {
   /* стили для подвала сайта */
   background-color: var(--title-background-color);
@@ -232,6 +292,10 @@ address {
   /* стили для номера телефона в футере */
   color: var(--tel-in-footer-color);
 }
+
+/* ======================================================== */
+/* =================PORTFOLIO-PAGE========================= */
+/* ======================================================== */
 
 .portfolio-button {
   /* стили для ряда кнопок в Портфолио */
