--- a/css/styles.css
+++ b/css/styles.css
@@ -124,6 +124,11 @@ body {
   font-weight: 500;
   margin-right: auto;
 }
+/* .header-nav .item {
+  /* сделать область наведения больше */
+/*padding-top: 15px;
+  padding-bottom: 15px;
+} */
 
 .site-nav .item:not(:last-child) {
   margin-right: 50px;
@@ -156,30 +161,29 @@ body {
 .hero {
   /*  стили для секции Hero*/
   background: var(--title-background-color);
+  text-align: center;
+  max-width: 100%;
+}
+
+.hero-title {
+  /* стили для заголовка сайта в Hero */
   color: var(--title-color);
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
-  text-align: center;
+  /* text-align: center; */
   letter-spacing: 0.06em;
-  /* max-width: 100%; */
-}
+  text-transform: uppercase;
+  /* width: max-width; */
 
-/* .hero .flexbox {
-  flex-direction: column;
-  align-items: center;
-} */
-
-.hero-title {
-  /* стили для заголовка сайта в Hero */
   margin-top: 0;
   margin-bottom: 0;
   padding-top: 200px;
-  padding-bottom: 30px;
-  width: auto;
-  /* padding-left: 237px;
-  padding-right: 237px; */
-  /* width: auto; */
+  /* max-width: 100%; */
+  padding-left: 237px;
+  padding-right: 237px;
+
+  outline: 2px solid orange;
 }
 
 .hero .button {
@@ -190,7 +194,12 @@ body {
   line-height: 1.87;
   background-color: var(--active-color);
   letter-spacing: 0.06em;
-  /* margin-bottom: 200px; */
+  margin-top: 30px;
+  margin-bottom: 200px;
+  /* margin-left: 500px; */
+  /* margin-right: 500px; */
+  /* width: auto; */
+  outline: 2px solid orange;
 
   padding: 10px 32px;
   /* box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15); */
@@ -240,11 +249,12 @@ body {
 
 /* ------------------------- */
 
-.features-whatdo-common h2 {
+.whatdo .text {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.71;
   text-align: center;
+  margin-top: 0;
 }
 
 /* ======================================================== */
