--- a/css/styles.css
+++ b/css/styles.css
@@ -270,34 +270,74 @@ body {
 /* ======================TEAM============================== */
 /* ======================================================== */
 
-.team-container {
+.our-team {
   /* стили для Наша Команда */
   background: var(--team-container-background);
 }
-.team-container h2 {
+
+.our-team .title {
+  /* стили к заголовку h2 Нашей Команды */
+  padding-top: 94px;
+  margin: 0;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
   text-align: center;
+  margin-bottom: 50px;
 }
-.team-container h3 {
-  /* font-size: 500; ????????????????*/
+
+.list.team {
+  /* выделения места чисто под карточки */
+  width: calc((100% - 30 * 3) / 4);
+  align-items: center;
+  padding-bottom: 94px;
+}
+.list.team .item:not(:last-child) {
+  /* разделение пространства между карточками */
+  margin-right: 30px;
+}
+.list.team .item {
+  /* фон карточек команды */
+  background-color: var(--title-color);
+}
+
+.list.team .item .title {
+  /* стили к заголовкам списка h3 Нашей Команды  */
+  padding-top: 30px;
+  /* padding left and right??? */
+  font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
   text-align: center;
+  margin-bottom: 10px;
 }
-.team-container p {
+.list.team .item .text {
+  /* стили к параграфам списка Нашей Команды  */
+  margin: 0;
   color: var(--inside-color);
   font-size: 16px;
   line-height: 1.19;
   text-align: center;
+  padding-bottom: 30px;
 }
+
+/* .list.team .item { */
+/* cтили для бордера карточки ???*/
+/* position: relative;
+  border: 1px solid var(--team-container-background);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+border-radius: 0px 0px 4px 4px; }*/
+
+/* .item.flexbox {
+  flex-direction: column;
+  align-items: center;
+} */
 
 /* ======================================================== */
 /* ======================FOOTER============================ */
 /* ======================================================== */
 
-.footer {
+.page-footer {
   /* стили для подвала сайта */
   background-color: var(--title-background-color);
   line-height: 1.71;
